FIX: Alerts for sticking to the visible screen

--- a/frontend/app/src/core/alert/components/Alert.module.css
+++ b/frontend/app/src/core/alert/components/Alert.module.css
@@ -12,7 +12,7 @@
 .alertsHolder {
     width: 100%;
     display: flex;
-    position: absolute;
+    position: fixed;
     padding: 20px;
     z-index: 2000;
     flex-wrap: wrap;
